force-app/main/default/objects/Account/fields/AN8ClientePadre__c.field-meta.xml
<CustomField>
    <fullName>AN8ClientePadre__c</fullName>
    <formula>Parent.codigoCliente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AN8 cliente padre</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>