force-app/main/default/objects/Account/fields/codigoCliente__c.field-meta.xml
<CustomField>
    <fullName>codigoCliente__c</fullName>
    <externalId>true</externalId>
    <label>Código del cliente</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>