force-app/main/default/objects/Account/fields/Id_Externo__c.field-meta.xml
<CustomField>
    <fullName>Id_Externo__c</fullName>
    <externalId>true</externalId>
    <label>Id Externo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>